changed the default theme

--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AccountInfoActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.AccountInfoActivity"
+    android:background="@drawable/card">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -12,7 +14,8 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -42,7 +45,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/full_name"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoUserName"
@@ -53,7 +57,10 @@
                     android:ems="10"
                     android:hint="@string/full_name_sign"
                     android:inputType="none"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -62,7 +69,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/e_mail"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoEmail"
@@ -74,7 +82,10 @@
                     android:hint="@string/e_mail_hint"
                     android:inputType="none"
                     android:textStyle="bold"
-                    tools:ignore="TextFields" />
+                    tools:ignore="TextFields"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -83,7 +94,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/birthday"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -99,7 +111,10 @@
                         android:ems="10"
                         android:hint="@string/birth_month"
                         android:inputType="date"
-                        android:maxLength="2" />
+                        android:maxLength="2"
+                        android:textColor="?attr/colorBackgroundFloating"
+                        android:textColorLink="?attr/colorBackgroundFloating"
+                        android:textColorHint="?attr/colorBackgroundFloating"/>
 
                     <EditText
                         android:id="@+id/accountInfoBirthYear"
@@ -109,7 +124,10 @@
                         android:ems="10"
                         android:hint="@string/birth_year"
                         android:inputType="date"
-                        android:maxLength="4" />
+                        android:maxLength="4"
+                        android:textColor="?attr/colorBackgroundFloating"
+                        android:textColorLink="?attr/colorBackgroundFloating"
+                        android:textColorHint="?attr/colorBackgroundFloating"/>
                 </LinearLayout>
 
                 <TextView
@@ -119,7 +137,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/address"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoAddress"
@@ -128,7 +147,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/address_sign_up"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -137,7 +159,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/home_phone"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoHomePhone"
@@ -146,7 +169,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/home_phone_sign_up"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -155,7 +181,9 @@
                     android:gravity="center_horizontal"
                     android:text="@string/cell_phone"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    />
 
                 <EditText
                     android:id="@+id/accountInfoCellPhone"
@@ -164,7 +192,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/cell_phone_sign_up"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -173,7 +204,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/grade"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoGrade"
@@ -182,7 +214,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/grade_students_sign_up"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -191,7 +226,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/teacher"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoTeacher"
@@ -200,7 +236,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/teacher_students_sign_up"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -209,7 +248,8 @@
                     android:gravity="center_horizontal"
                     android:text="@string/emergency_contact_info"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorBackgroundFloating"/>
 
                 <EditText
                     android:id="@+id/accountInfoEmergencyContact"
@@ -218,7 +258,10 @@
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/emergency_contact_info_sign_up"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColor="?attr/colorBackgroundFloating"/>
             </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
