--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".app.SignUpActivity">
+    tools:context=".app.SignUpActivity"
+    android:background="@drawable/card">
 
     <include
         layout="@layout/toolbar_navigation"
@@ -16,16 +17,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <android.support.v7.widget.CardView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_margin="15dp">
+            android:layout_margin="15dp" >
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/small">
 
             <Button
                 android:id="@+id/add_monitored_btn"
@@ -49,15 +51,16 @@
                 android:layout_margin="8dp"
                 android:layout_marginTop="8dp" />
 
-            <TextView
-                android:id="@+id/monitored_txtview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:text="@string/monitored"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/monitored_txtview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/monitored"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/comment_txt_view"
@@ -89,7 +92,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/small">
 
         <Button
             android:id="@+id/add_monitoring_btn"
@@ -121,6 +125,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
             android:text="@string/monitoring"
+            android:textColor="?attr/colorBackgroundFloating"
             android:textSize="18sp" />
 
         <TextView
