--- a/app/src/main/res/layout/activity_rewards_shop.xml
+++ b/app/src/main/res/layout/activity_rewards_shop.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.RewardShopActivity">
+    tools:context=".app.RewardShopActivity"
+    android:background="@drawable/card">
 
 
     <TextView
@@ -20,15 +21,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="?attr/colorBackgroundFloating"/>
 
     <ListView
         android:id="@+id/reward_list"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/current_points"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/current_points" />
 
 
 </android.support.constraint.ConstraintLayout>
