--- a/app/src/main/res/layout/activity_add_monitored.xml
+++ b/app/src/main/res/layout/activity_add_monitored.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AddMonitoredActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.AddMonitoredActivity"
+    android:background="@drawable/card">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="25dp">
+        android:padding="25dp"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,7 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/input_user_email"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="?attr/colorBackgroundFloating"/>
 
             <EditText
                 android:id="@+id/find_user_edit_txt2"
@@ -34,7 +38,12 @@
                 android:hint="@string/user_email_hint"
                 android:inputType="textEmailAddress"
                 tools:layout_editor_absoluteX="28dp"
-                tools:layout_editor_absoluteY="135dp" />
+                tools:layout_editor_absoluteY="135dp"
+                android:textColor="?attr/colorBackgroundFloating"
+                android:textColorHint="?attr/colorBackgroundFloating"
+                android:shadowColor="?attr/colorBackgroundFloating"
+                android:textColorHighlight="?attr/colorBackgroundFloating"
+                android:textColorLink="?attr/colorBackgroundFloating"/>
 
             <Button
                 android:id="@+id/get_monitored_btn"
