--- a/app/src/main/res/layout/activity_add_monitoring.xml
+++ b/app/src/main/res/layout/activity_add_monitoring.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AddMonitoringActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.AddMonitoringActivity"
+    android:background="@drawable/card">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/input_user_email"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="?attr/colorBackgroundFloating"/>
 
             <EditText
                 android:id="@+id/find_user_edit_txt"
@@ -33,7 +37,10 @@
                 android:hint="@string/user_email_hint"
                 android:inputType="textEmailAddress"
                 tools:layout_editor_absoluteX="28dp"
-                tools:layout_editor_absoluteY="135dp" />
+                tools:layout_editor_absoluteY="135dp"
+                android:textColor="?attr/colorBackgroundFloating"
+                android:textColorHint="?attr/colorBackgroundFloating"
+                android:textColorLink="?attr/colorBackgroundFloating"/>
 
             <Button
                 android:id="@+id/add_monitoring_user_button"
