--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.CreateGroup">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.CreateGroup"
+    android:background="@drawable/card">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +27,10 @@
                 android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="@string/enter_group_name"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textColor="?attr/colorBackgroundFloating"
+                android:textColorHint="?attr/colorBackgroundFloating"
+                android:textColorLink="?attr/colorBackgroundFloating"/>
 
             <Button
                 android:id="@+id/starting_location"
