--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.LeaderboardActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.LeaderboardActivity"
+    android:background="@drawable/card">
 
     <TextView
         android:id="@+id/leaderboard"
@@ -13,7 +15,8 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:text="Leaderboard"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textColor="?attr/colorBackgroundFloating"/>
 
     <TextView
         android:id="@+id/your_score"
@@ -21,13 +24,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/leaderboard"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:textColor="?attr/colorBackgroundFloating"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/your_score"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <ListView
             android:id="@+id/leaderboard_list"
