--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,16 @@
     tools:context=".app.LoginActivity"
     android:background="@drawable/bllueindigoback">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="215dp"
+        android:layout_height="138dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/indigodefault" />
+
+
+
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="209dp"
@@ -17,7 +27,7 @@
         <LinearLayout
             android:layout_width="272dp"
             android:layout_height="match_parent"
-            android:background="@drawable/cardshadow"
+            android:background="@drawable/small"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="15dp">
@@ -56,13 +66,5 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="215dp"
-        android:layout_height="138dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/dlueindigoarm" />
 
 </RelativeLayout>
