--- a/app/src/main/res/layout/activity_manage_messages.xml
+++ b/app/src/main/res/layout/activity_manage_messages.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.ManageMessagesActivity">
+    tools:context=".app.ManageMessagesActivity"
+    android:background="@drawable/card">
 
     <include
         android:id="@+id/messagesToolbar"
@@ -12,12 +13,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/messages_listview"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="451dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/messagesToolbar"/>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/messagesToolbar"
+        android:layout_margin="15dp"
+        android:background="@drawable/small">
+
+        <ListView
+            android:id="@+id/messages_listview"
+            android:layout_width="match_parent"
+            android:layout_height="451dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/messagesToolbar"
+            android:background="@drawable/card"/>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
