--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.PermissionActivity">
+    tools:context=".app.PermissionActivity"
+    android:background="@drawable/card">
 
     <include
         android:id="@+id/parentLinkToolbar"
@@ -12,10 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_below="@+id/parentLinkToolbar" >
+
     <ListView
+        android:padding="5sp"
         android:id="@+id/permission_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/parentLinkToolbar" />
+        android:background="@drawable/card"/>
+
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
