--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -3,7 +3,8 @@
     android:id="@+id/reward_description"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="5dp">
+    android:paddingBottom="5dp"
+    android:background="@color/colorPrimary">
 
 
     <TextView
@@ -15,7 +16,8 @@
         android:layout_margin="5dp"
         android:text="@string/reward"
         android:textSize="24sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:textColor="?attr/colorBackgroundFloating"/>
 
     <TextView
         android:id="@+id/reward_price"
@@ -26,7 +28,8 @@
         android:layout_margin="5dp"
         android:text="@string/price"
         android:textSize="18sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:textColor="?attr/colorBackgroundFloating"/>
 
     <Button
         android:id="@+id/buy"
