--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AccountInfoActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".app.AccountInfoActivity"
+    android:background="@drawable/card">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <ScrollView
             android:layout_width="wrap_content"
@@ -19,7 +22,8 @@
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+            android:paddingRight="15dp"
+            android:background="@drawable/small">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -27,7 +31,8 @@
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:paddingRight="20dp"
+                android:background="@drawable/small">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -35,6 +40,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/full_name"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -46,7 +52,10 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/full_name_sign"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -54,6 +63,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/e_mail"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -66,7 +76,10 @@
                     android:ems="10"
                     android:hint="@string/e_mail_hint"
                     android:inputType="none"
-                    tools:ignore="TextFields" />
+                    android:textColor="?attr/colorBackgroundFloating"
+                    tools:ignore="TextFields"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -74,6 +87,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/birthday"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -91,7 +105,10 @@
                         android:editable="false"
                         android:ems="10"
                         android:hint="@string/birth_month"
-                        android:inputType="none" />
+                        android:inputType="none"
+                        android:textColor="?attr/colorBackgroundFloating"
+                        android:textColorHint="?attr/colorBackgroundFloating"
+                        android:textColorLink="?attr/colorBackgroundFloating"/>
 
                     <EditText
                         android:id="@+id/userInfoBirthYear"
@@ -101,7 +118,10 @@
                         android:editable="false"
                         android:ems="10"
                         android:hint="@string/birth_year"
-                        android:inputType="none" />
+                        android:inputType="none"
+                        android:textColor="?attr/colorBackgroundFloating"
+                        android:textColorHint="?attr/colorBackgroundFloating"
+                        android:textColorLink="?attr/colorBackgroundFloating"/>
                 </LinearLayout>
 
                 <TextView
@@ -110,6 +130,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/address"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -121,7 +142,10 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/address_sign_up"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -129,6 +153,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/home_phone"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -141,7 +166,10 @@
                     android:ems="10"
                     android:hint="@string/home_phone_sign_up"
                     android:inputType="none"
-                    tools:ignore="TextFields" />
+                    android:textColor="?attr/colorBackgroundFloating"
+                    tools:ignore="TextFields"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -149,6 +177,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/cell_phone"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -161,7 +190,10 @@
                     android:ems="10"
                     android:hint="@string/cell_phone_sign_up"
                     android:inputType="none"
-                    tools:ignore="TextFields" />
+                    android:textColor="?attr/colorBackgroundFloating"
+                    tools:ignore="TextFields"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -169,6 +201,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/grade"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -180,7 +213,10 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/grade_students_sign_up"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -188,6 +224,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/teacher"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -199,7 +236,10 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/teacher_students_sign_up"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -207,6 +247,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:text="@string/emergency_contact_info"
+                    android:textColor="?attr/colorBackgroundFloating"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -218,7 +259,10 @@
                     android:editable="false"
                     android:ems="10"
                     android:hint="@string/emergency_contact_info_sign_up"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:textColor="?attr/colorBackgroundFloating"
+                    android:textColorHint="?attr/colorBackgroundFloating"
+                    android:textColorLink="?attr/colorBackgroundFloating"/>
             </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
