--- a/app/src/main/res/layout/parent_details.xml
+++ b/app/src/main/res/layout/parent_details.xml
@@ -4,18 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@drawable/small">
 
     <TextView
         android:id="@+id/parentDetailsName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/parentDetailsEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="?attr/colorBackgroundFloating"
         android:textSize="14sp" />
 
     <ListView
