Now, the themes are more or less created, and there is a helper function to set the themes on every page.

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -31,7 +31,7 @@
         <item>Office Teal</item>
         <item>The Dark Knight</item>
         <item>SFU Red</item>
-        <item>God Slayer</item>
+        <item>Steel</item>
     </string-array>
 
 </resources>
